gitops/apps/development/podinfo/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
  namespace: apps
spec:
  parentRefs:
    - name: cloudlab
      namespace: envoy-gateway-system
  hostnames:
    - "frontend.lab.christiaan.cloud"
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /
    backendRefs:
      - name: blue-frontend
        port: 80
        weight: 0
      - name: green-frontend
        port: 80
        weight: 100
